--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="2SemProject/src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/ClausMøller/Desktop/Eclipse projects/junit-4.10.jar"/>
 	<classpathentry kind="lib" path="C:/Users/ClausMøller/Desktop/Eclipse projects/sqljdbc4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/ClausMøller/Desktop/Eclipse projects/swing-layout-1.0.1.jar"/>
