--- a/2SemProject/.classpath
+++ b/2SemProject/.classpath
@@ -2,5 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/Frederik/Dropbox/UCN/2Semester/programmering/ikkeZiped/session04/jarFiles/junit-4.10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Frederik/Dropbox/UCN/2Semester/programmering/ikkeZiped/session04/jarFiles/sqljdbc4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Frederik/Dropbox/UCN/2Semester/programmering/ikkeZiped/session04/jarFiles/swing-layout-1.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
