--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,8 @@
 	<classpathentry kind="lib" path="C:/Users/Frederik/Dropbox/UCN/2Semester/programmering/ikkeZiped/session04/jarFiles/junit-4.10.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Frederik/Dropbox/UCN/2Semester/programmering/ikkeZiped/session04/jarFiles/sqljdbc4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Frederik/Dropbox/UCN/2Semester/programmering/ikkeZiped/session04/jarFiles/swing-layout-1.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ClausMøller/Desktop/Eclipse projects/junit-4.10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ClausMøller/Desktop/Eclipse projects/sqljdbc4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ClausMøller/Desktop/Eclipse projects/swing-layout-1.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
