--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="2SemProject/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/ClausMøller/Desktop/Eclipse projects/junit-4.10.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ClausMøller/Desktop/Eclipse projects/sqljdbc4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ClausMøller/Desktop/Eclipse projects/swing-layout-1.0.1.jar"/>
+	<classpathentry kind="lib" path="2SemProject/junit-4.10.jar"/>
+	<classpathentry kind="lib" path="2SemProject/sqljdbc4.jar"/>
+	<classpathentry kind="lib" path="2SemProject/swing-layout-1.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
